phase 1 dan 2 slesai

--- a/todo.txt
+++ b/todo.txt
@@ -18,21 +18,21 @@ Kalau phase ini jelek, semua di atasnya sampah
 6. Base MVC✅
 7. Base Controller✅
 8. Method view()✅
-9. Base Model
-10. Koneksi database (PDO)
-11. Session
-12. Session class
-13. Flash message
+9. Base Model✅
+10. Koneksi database (PDO)✅
+11. Session✅
+12. Session class✅
+13. Flash message✅
 
 🔐 PHASE 2 — AUTHENTICATION
 
-1. Register user
-2. Login user
-3. Logout
-4. Password hashing
-5. Session login
-6. Guest middleware
-7. Auth middleware
+1. Register user✅
+2. Login user✅
+3. Logout✅
+4. Password hashing✅
+5. Session login✅
+6. Guest middleware✅
+7. Auth middleware✅
 
 🧑‍⚖️ PHASE 3 — ROLE & MIDDLEWARE
 
